	invoke the osso-backup application: now using the
	osso_application_top function instead of the run_cmd utility
	function, to avoid having more than one instance of osso-backup
	when pressing the 'Backup' button (N70767).
	(ip_suggest_backup_cmd_done): Removed, since it's not needed
	because run_cmd it's not used now to launch osso-backup (N70767).

2007-09-24  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.23

2007-09-20  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (set_cat_list): Added a new parameter to specify a
	GtkTreeIter pointing to the element of the treeview that will be
	focused after rendering it (N67880).
	(cat_edit_response): Update call to set_cat_list to set the
	currently selected iter as the iter to be focused (N67880).
	(refresh_cat_list): Update call to set_cat_list using NULL as the
	new parameter, since it's not needed to focus any iter (N67880).
	(remove_cat_cont): Update call to set_cat_list using NULL as the
	new parameter, since it's not needed to focus any iter (N67880).
	(show_catalogue_dialog): Moved the creation of the treeview after
	setting the sensitiveness to buttons, to let the signals work and
	set it as is needed according to the selected item (N67880).

2007-09-19  Mario Sanchez Prada  <msanchez@maemo.org>

	* utils/maemo-select-menu-location-main.c (dialog_exposed):
	New. Callback to ensure that the select location dialog is always
	drawn on top of HAM windows (N69646).
	(run_select_location_dialog): Connected the 'expose-event' signal
	to new callback commented above (N69646).

2007-09-17  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (ip_suggest_backup): Fixed bug when trying to
	cancel the suggest-backup dialog with escape hardkey (N69652).

	* src/util.cc (start_interaction_flow): Fixed a localization error
	for the "operation in progress" message (N68912).
	(make_global_package_list): Show logical background colors for
	even/odd rows in the package list (N69616).
